withTime: ported to the new infrastructure